# rollingstats

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: index.md
rollingstats/: __init__.py  _crolling.c  core.py
tests/: test_core.py
